fix account page overlaps error, added prefareryles component

--- a/src/components/account/user.css
+++ b/src/components/account/user.css
@@ -126,10 +126,13 @@
     border-radius: 5px;
     border: none;
     padding:5px;
+    height:40px;
     cursor: pointer;
+
     background-color: cornflowerblue;
     color: white;
     font-weight: 600;
+    font-size: 14px;
 }
 .log{
   color: cornflowerblue;
